Full renaming completed
